feat: starface api response 에 따라 화면 분기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+
+    <string name="nobody_celebrity">유사한 유명인이 없습니다.</string>
 </resources>
