feat: offset, limit 로 history 조회하도록 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="nobody_celebrity">유사한 유명인이 없습니다.</string>
 
+    <string name="empty_history">검색 기록이 없습니다.</string>
+
     <string name="network_error">네트워크 연결 상태를 확인해주세요.</string>
 </resources>
